temp fixed part of tests

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -43,3 +43,5 @@ services:
         arguments:
             - '@report.data_type_registry'
             - '@property_accessor'
+
+    Doctrine\Bundle\MongoDBBundle\ManagerRegistry: '@doctrine_mongodb'
