service document repository tag

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -45,3 +45,8 @@ services:
             - '@property_accessor'
 
     Doctrine\Bundle\MongoDBBundle\ManagerRegistry: '@doctrine_mongodb'
+
+    GepurIt\ReportBundle\Repository\:
+        autowire: true
+        resource: '../../Repository'
+        tags: ['doctrine_mongodb.odm.repository_service']
