--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "gepur-it/report-bundle",
-    "version": "2.1.3",
+    "version": "2.1.4",
     "description": "Gepur ERP Report generation bundle",
     "type": "symfony-bundle",
     "keywords": [
@@ -22,7 +22,8 @@
         "symfony/finder": "^5.0",
         "doctrine/mongodb-odm-bundle": "^4.3",
         "symfony/property-access": "^5.0",
-        "yawa20/registry-bundle": "^5.0"
+        "yawa20/registry-bundle": "^5.0",
+        "symfony/uid": "^5.2"
     },
     "license": "MIT",
     "authors": [
